--- a/index.html
+++ b/index.html
@@ -1,5 +1,14 @@
+<!DOCTYPE html>
 <html lang="fr">
-
-jooooo
-
-dsjfsfsdfsd
+<head>
+  <meta charset="utf-8">
+  <title>Jonathan Gomez</title>
+  <link rel="stylesheet" href="main.css">
+  <script src="script.js"></script>
+</head>
+<body>
+  ...
+  <!-- Le reste du contenu -->
+  ...
+</body>
+</html>
