--- a/index.html
+++ b/index.html
@@ -2,13 +2,149 @@
 <html lang="fr">
 <head>
   <meta charset="utf-8">
-  <title>Jonathan Gomez</title>
+  <title>Jonathan Gomez, Développeur Web</title>
   <link rel="stylesheet" href="main.css">
   <script src="script.js"></script>
 </head>
+
+<header>
+  <nav>
+
+    <ul>
+      <!--A GAUCHE-->
+      <li class="navgauche">Home</li>
+      <li class="navgauche">About me</li><!-- ma présentation cool-->
+      <li class="navgauche">Parcours</li> <!--Formations, expèriences et compétences-->
+      <li class="navgauche">Work</li><!--Mes réalisations-->
+      <li class="navgauche">Contact</li>
+      <!--A DROITE-->
+      <li class="navdroite">Lien Twitter</li>
+      <li class="navdroite">Lien Facebook</li>
+      <li class="navdroite">Lien Linkedin</li>
+      <li class="navdroite">Lien Github</li>
+    </ul>
+  </nav>
+
+  <h1>Bienvenue sur mon portfolio</h1>
+  <h2>Jonathan Gomez Développeur Web</h2>
+  <h3>En savoir plus<!--ou bouton--></h3>
+
+</header>
+
 <body>
-  ...
-  <!-- Le reste du contenu -->
-  ...
+
+<!--...................................PRESENTATION...........-->
+
+  <section id="presentation">
+    <h2>A propos de moi</h2>
+    <img src="adresse/image.jpg" alt="Photo de profil" />
+    <p>Je suis Jonathan blalablablablbla bgdhgalbzhezgzekgfdghdfjghfdkhgdfkghdfhgdfhm</p>
+
+
+  </section>
+
+  <!--.........................PARCOURS.................-->
+
+
+  <section id="formation">
+    <h2>Mon parcours</h2>
+    <h3>Formation/Diplôme</h3>
+
+    <header><h4>Développeur Web Mobile</h4></header>
+    <article>BeWeb Lunel</article>
+    <footer>2016</footer>
+
+    <header><h4>BTS Négociation Relation Client</h4></header>
+    <article>Rise Montpellier</article>
+    <footer>2012</footer>
+
+    <header><h4>BAC STG Marketing</h4></header>
+    <article>Lycée Alphonse Daudet Tarascon</article>
+    <footer>2010</footer>
+
+
+  </section>
+
+  <section id="experience">
+    <h3>Expériences professionnelles</h3>
+
+    <!--- ICI UNE FRISE-->
+
+      <header><h4>Opérateur de réception</h4></header>
+      <article>Intérim Juillet 2010-Décembre 2010</article>
+      <footer>FIBRE EXCELLENCE</footer>
+
+      <header><h4>Attaché Commercial</h4></header>
+      <article>Contrat de professionalisation Janvier 2011-Août2012</article>
+      <footer>STORES MICHEL</footer>
+
+      <header><h4>Responsable Location</h4></header>
+      <article>Intérim 1 mois Janvier 2014</article>
+      <footer>LOXAM</footer>
+
+      <header><h4>Conseiller de Vente</h4></header>
+      <article>CDD 1 mois Juin 2014</article>
+      <footer>NORAUTO</footer>
+
+      <header><h4>Opérateur de réception</h4></header>
+      <article>Intérim Avril 2014-Avril 2016</article>
+      <footer>FIBRE EXCELLENCE</footer>
+
+
+  </section>
+
+  </section>
+
+<!--.........................COMPETENCES.................-->
+
+  <section id="compétence">
+    <h3>Compétences</h3>
+      <h4>Langages et Framework</h4>
+
+  <section id="front">
+    <h4>Front</h4>
+    <!-- ICI LOGO LANGAGE -->
+  </section>
+
+  <section id="back">
+    <h4>Back</h4>
+    <!-- ICI LOGO LANGAGE -->
+  </section>
+
+  </section>
+
+  <section id="loisir">
+    <h3>Mes loisirs</h3>
+    <p>Lire</p>
+    <p>Web</p>
+    <p>Football</p>
+
+  </section>
+
+  <!--...................MES REALISATIONS...........-->
+
+  <section id="realisation">
+    <h2>Mes réalisations</h2>
+    <!--..........ICI UN ECRAN......-->
+  </section>
+
+
+  <!--..................CONTACT.........................-->
+
+  <footer id="contact">
+
+    	<h3>Contactez-moi</h3>
+      <!--ICONE FLECHE LOCALISATION-->
+    	<p>40 Rue de la redoute
+    	30 300 Beaucaire</p>
+      <!--ICONE TELEPHONE-->
+    	<p>06.19.85.33.15</p>
+      <!--ICONE ENVELOPPE-->
+    	<p>jonathan-gomez@hotmail.fr</p>
+      
+  </footer>
+
+
+
 </body>
 </html>
