--- a/index.html
+++ b/index.html
@@ -140,8 +140,7 @@
 
     	<h3>Contactez-moi</h3>
       <!--ICONE FLECHE LOCALISATION-->
-    	<p>40 Rue de la redoute
-    	30 300 Beaucaire</p>
+    	<p>40 Rue de la redoute 30 300 Beaucaire</p>
       <!--ICONE TELEPHONE-->
     	<p>06.19.85.33.15</p>
       <!--ICONE ENVELOPPE-->
