--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8">
   <title>Jonathan Gomez, Développeur Web</title>
-  <link rel="stylesheet" href="css/main.css">
-  <script src="script.js"></script>
+  <link rel="stylesheet" href="./css/main.css">
+  <script src="./script/script.js"></script>
 </head>
 
 <header>
@@ -19,27 +19,41 @@
 		<li><a href="#realisation">Work</a></li><!--Mes réalisations-->
 		<li><a href="#contact">Contact</a></li>
 		<!--A DROITE-->
-		<li><a href="#">Twitter</a></li>
-		<li><a href="#">FB</a></li>
-		<li><a href="#">Linkedin</a></li>
-		<li><a href="#">Github</a></li>
+		<li><a href="https://twitter.com/Jogomezzzz">Twitter</a></li>
+		<li><a href="https://www.facebook.com/profile.php?id=100012290583102">FB</a></li>
+		<li><a href="https://fr.linkedin.com/in/jonathan-gomez-04793695">Linkedin</a></li>
+		<li><a href="https://github.com/Jogomez13">Github</a></li>
 	</ul>
   </nav>
 
-  <h1>Bienvenue sur mon portfolio</h1>
-  <h2>Jonathan Gomez Développeur Web</h2>
-  <h3>En savoir plus<!--ou bouton--></h3>
 
 </header>
 
 <body>
+
+  <section id="accueil">
+
+    <h1>Bienvenue sur mon portfolio</h1>
+    <h2>Jonathan Gomez Développeur Web</h2>
+    <h3><a href="#presentation">En savoir plus</a><!--ou bouton--></h3>
+  </section>
 
 <!--...................................PRESENTATION...........-->
 
   <section id="presentation">
     <h2>A propos de moi</h2>
     <img src="adresse/image.jpg" alt="Photo de profil" />
-    <p>Je suis Jonathan blalablablablbla bgdhgalbzhezgzekgfdghdfjghfdkhgdfkghdfhgdfhm</p>
+    <p>Incenderat autem audaces usque ad insaniam homines ad haec, quae nefariis egere conatibus,
+      Luscus quidam curator urbis subito visus: eosque ut heiulans baiolorum praecentor ad expediendum
+      quod orsi sunt incitans vocibus crebris. qui haut longe postea ideo vivus exustus est.Incenderat autem
+      audaces usque ad insaniam homines ad haec, quae nefariis egere conatibus, Luscus quidam curator urbis
+      subito visus: eosque ut heiulans baiolorum praecentor ad expediendum quod orsi sunt incitans vocibus crebris.
+      qui haut longe postea ideo vivus Incenderat autem audaces usque ad insaniam homines ad haec, quae nefariis egere
+      conatibus, Luscus quidam curator urbis subito visus: eosque ut heiulans baiolorum praecentor ad expediendum quod
+      orsi sunt incitans vocibus crebris. qui haut longe postea ideo vivus exustus Incenderat autem audaces usque ad
+      insaniam homines ad haec, quae nefariis egere conatibus, Luscus quidam curator urbis subito visus: eosque ut
+      heiulans baiolorum praecentor ad expediendum quod orsi sunt incitans vocibus crebris. qui haut longe postea
+      ideo vivus exustus est.est.exustus est.</p>
 
 
   </section>
@@ -98,21 +112,33 @@
   </section>
 
 <!--.........................COMPETENCES.................-->
-
-  <section id="compétence">
-    <h3>Compétences</h3>
+  <h3>Compétences</h3>
       <h4>Langages et Framework</h4>
-
+      <section id="competence">
 <!--.........................FRONT................-->
   <section id="front">
     <h4>Front</h4>
     <!-- ICI LOGO LANGAGE -->
+    Incenderat autem audaces usque ad insaniam homines ad haec, quae nefariis egere conatibus,
+      Luscus quidam curator urbis subito visus: eosque ut heiulans baiolorum praecentor ad expediendum
+      quod orsi sunt incitans vocibus crebris. qui haut longe postea ideo vivus exustus est.Incenderat autem
+      audaces usque ad insaniam homines ad haec, quae nefariis egere conatibus, Luscus quidam curator urbis
+      subito visus: eosque ut heiulans baiolorum praecentor ad expediendum quod orsi sunt incitans vocibus crebris.
+      qui haut longe postea ideo vivus Incenderat autem audaces usque ad insaniam homines ad haec, quae nefariis egere
+      conatibus, Luscus quidam curator
   </section>
 
 <!--.........................BACK.................-->
   <section id="back">
     <h4>Back</h4>
     <!-- ICI LOGO LANGAGE -->
+    Incenderat autem audaces usque ad insaniam homines ad haec, quae nefariis egere conatibus,
+      Luscus quidam curator urbis subito visus: eosque ut heiulans baiolorum praecentor ad expediendum
+      quod orsi sunt incitans vocibus crebris. qui haut longe postea ideo vivus exustus est.Incenderat autem
+      audaces usque ad insaniam homines ad haec, quae nefariis egere conatibus, Luscus quidam curator urbis
+      subito visus: eosque ut heiulans baiolorum praecentor ad expediendum quod orsi sunt incitans vocibus crebris.
+      qui haut longe postea ideo vivus Incenderat autem audaces usque ad insaniam homines ad haec, quae nefariis egere
+      conatibus, Luscus quidam curator
   </section>
 
   </section>
@@ -130,7 +156,9 @@
   <section id="realisation">
     <h2>Mes réalisations</h2>
     <!--..........ICI UN ECRAN......-->
-    <img id="ordi" src="ordi2.png" alt="Photo d'écran" />
+
+    <a href="#"><img id="ordi" src="./image/ordi2.png" alt="Photo d'écran" /></a>
+
   </section>
 
 
