--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
   <meta charset="utf-8">
-  <title>Jonathan Gomez, Développeur Web</title>
+  <title>Jonathan Gomez || Développeur Web</title>
   <link rel="stylesheet" href="./css/main.css">
   <script src="./script/script.js"></script>
 </head>
@@ -12,18 +12,25 @@
 <!--.......................NAVIGATION..............-->
     <nav>
     <ul class="mixed-menu">
-		<!--A GAUCHE-->
+
 		<li><a href="#accueil">Home</a></li>
 		<li><a href="#presentation">About me</a></li><!-- ma présentation cool-->
 		<li><a href="#formation">Parcours</a></li> <!--Formations, expèriences et compétences-->
 		<li><a href="#realisation">Work</a></li><!--Mes réalisations-->
 		<li><a href="#contact">Contact</a></li>
-		<!--A DROITE-->
-		<li><a href="https://twitter.com/Jogomezzzz">Twitter</a></li>
-		<li><a href="https://www.facebook.com/profile.php?id=100012290583102">FB</a></li>
-		<li><a href="https://fr.linkedin.com/in/jonathan-gomez-04793695">Linkedin</a></li>
-		<li><a href="https://github.com/Jogomez13">Github</a></li>
+
+<!--LOGO NAV-->
+	<li><a href="https://twitter.com/Jogomezzzz">
+      <img id="logotwitter" src="./image/logo_twitter.png" alt="Twitter" /></a></li>
+		<li><a href="https://www.facebook.com/profile.php?id=100012290583102">
+      <img id="logofacebook" src="./image/logo_facebook.png" alt="Facebook" /></a></li>
+		<li><a href="https://fr.linkedin.com/in/jonathan-gomez-04793695">
+      <img id="logolinkedin" src="./image/logo_linkedin.png" alt="Linkedin" /></a></li>
+		<li><a href="https://github.com/Jogomez13">
+      <img id="logogithub" src="./image/logo_github.png" alt="Github" /></a></li>
+
 	</ul>
+
   </nav>
 
 
@@ -33,7 +40,7 @@
 
   <section id="accueil">
 
-    <h1>Bienvenue sur mon portfolio</h1>
+    <h1>Bienvenue sur mon Portfolio</h1>
     <h2>Jonathan Gomez Développeur Web</h2>
     <h3><a href="#presentation">En savoir plus</a><!--ou bouton--></h3>
   </section>
@@ -42,7 +49,7 @@
 
   <section id="presentation">
     <h2>A propos de moi</h2>
-    <img src="adresse/image.jpg" alt="Photo de profil" />
+    <img id="profil" src="./image/gignac.jpg" alt="Photo de profil" />
     <p>Incenderat autem audaces usque ad insaniam homines ad haec, quae nefariis egere conatibus,
       Luscus quidam curator urbis subito visus: eosque ut heiulans baiolorum praecentor ad expediendum
       quod orsi sunt incitans vocibus crebris. qui haut longe postea ideo vivus exustus est.Incenderat autem
@@ -63,6 +70,7 @@
 <!--.........................FORMATION.................-->
   <section id="formation">
     <h2>Mon parcours</h2>
+
     <h3>Formation/Diplôme</h3>
 
     <header><h4>Développeur Web Mobile</h4></header>
@@ -82,7 +90,7 @@
 
 <!--.........................EXPERIENCES.................-->
   <section id="experience">
-    <h3>Expériences professionnelles</h3>
+    <h2>Expériences professionnelles</h2>
 
     <!--- ICI UNE FRISE-->
 
@@ -112,8 +120,8 @@
   </section>
 
 <!--.........................COMPETENCES.................-->
-  <h3>Compétences</h3>
-      <h4>Langages et Framework</h4>
+  <h2>Compétences</h2>
+      <h3>Langages et Framework</h3>
       <section id="competence">
 <!--.........................FRONT................-->
   <section id="front">
@@ -144,7 +152,7 @@
   </section>
 <!--.........................LOISIR.................-->
   <section id="loisir">
-    <h3>Mes loisirs</h3>
+    <h2>Mes loisirs</h2>
     <p>Lire</p>
     <p>Web</p>
     <p>Football</p>
@@ -166,7 +174,7 @@
 
   <footer id="contact">
 
-    	<h3>Contactez-moi</h3>
+    	<h3>Contact</h3>
       <!--ICONE FLECHE LOCALISATION-->
     	<p>40 Rue de la redoute 30 300 Beaucaire</p>
       <!--ICONE TELEPHONE-->
