--- a/index.html
+++ b/index.html
@@ -120,9 +120,12 @@
   </section>
 
 <!--.........................COMPETENCES.................-->
+<div class="competence">
   <h2>Compétences</h2>
-      <h3>Langages et Framework</h3>
-      <section id="competence">
+    <h3>Langages et Framework</h3>
+
+      <section id="frontback">
+
 <!--.........................FRONT................-->
   <section id="front">
     <h4>Front</h4>
@@ -148,6 +151,7 @@
       qui haut longe postea ideo vivus Incenderat autem audaces usque ad insaniam homines ad haec, quae nefariis egere
       conatibus, Luscus quidam curator
   </section>
+  </div>
 
   </section>
 <!--.........................LOISIR.................-->
