--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
 		<li><a href="#realisation">Work</a></li><!--Mes réalisations-->
 		<li><a href="#contact">Contact</a></li>
 
+  </ul>
 <!--LOGO NAV-->
+  <ul class ="logomenu">
 	<li><a href="https://twitter.com/Jogomezzzz">
       <img id="logotwitter" src="./image/logo_twitter.png" alt="Twitter" /></a></li>
 		<li><a href="https://www.facebook.com/profile.php?id=100012290583102">
@@ -49,12 +51,12 @@
 
   <section id="presentation">
     <h2>A propos de moi</h2>
-    <img id="profil" src="./image/gignac.jpg" alt="Photo de profil" />
+    <img id="profil" src="./image/logo_tete.png" alt="Photo de profil" />
     <p>Incenderat autem audaces usque ad insaniam homines ad haec, quae nefariis egere conatibus,
       Luscus quidam curator urbis subito visus: eosque ut heiulans baiolorum praecentor ad expediendum
       quod orsi sunt incitans vocibus crebris. qui haut longe postea ideo vivus exustus est.Incenderat autem
       audaces usque ad insaniam homines ad haec, quae nefariis egere conatibus, Luscus quidam curator urbis
-      subito visus: eosque ut heiulans baiolorum praecentor ad expediendum quod orsi sunt incitans vocibus crebris.
+      subito visus: eosnque ut heiulans baiolorum praecentor ad expediendum quod orsi sunt incitans vocibus crebris.
       qui haut longe postea ideo vivus Incenderat autem audaces usque ad insaniam homines ad haec, quae nefariis egere
       conatibus, Luscus quidam curator urbis subito visus: eosque ut heiulans baiolorum praecentor ad expediendum quod
       orsi sunt incitans vocibus crebris. qui haut longe postea ideo vivus exustus Incenderat autem audaces usque ad
@@ -130,26 +132,16 @@
   <section id="front">
     <h4>Front</h4>
     <!-- ICI LOGO LANGAGE -->
-    Incenderat autem audaces usque ad insaniam homines ad haec, quae nefariis egere conatibus,
-      Luscus quidam curator urbis subito visus: eosque ut heiulans baiolorum praecentor ad expediendum
-      quod orsi sunt incitans vocibus crebris. qui haut longe postea ideo vivus exustus est.Incenderat autem
-      audaces usque ad insaniam homines ad haec, quae nefariis egere conatibus, Luscus quidam curator urbis
-      subito visus: eosque ut heiulans baiolorum praecentor ad expediendum quod orsi sunt incitans vocibus crebris.
-      qui haut longe postea ideo vivus Incenderat autem audaces usque ad insaniam homines ad haec, quae nefariis egere
-      conatibus, Luscus quidam curator
+    <img class="logofront" src="./image/logo_html.png" alt="logo html" />
+    <img class="logofront" src="./image/logo_css.png" alt="logo css" />
+    <img class="logofront" src="./image/logo_javascript.png" alt="logo javascript" />
   </section>
 
 <!--.........................BACK.................-->
   <section id="back">
     <h4>Back</h4>
     <!-- ICI LOGO LANGAGE -->
-    Incenderat autem audaces usque ad insaniam homines ad haec, quae nefariis egere conatibus,
-      Luscus quidam curator urbis subito visus: eosque ut heiulans baiolorum praecentor ad expediendum
-      quod orsi sunt incitans vocibus crebris. qui haut longe postea ideo vivus exustus est.Incenderat autem
-      audaces usque ad insaniam homines ad haec, quae nefariis egere conatibus, Luscus quidam curator urbis
-      subito visus: eosque ut heiulans baiolorum praecentor ad expediendum quod orsi sunt incitans vocibus crebris.
-      qui haut longe postea ideo vivus Incenderat autem audaces usque ad insaniam homines ad haec, quae nefariis egere
-      conatibus, Luscus quidam curator
+
   </section>
   </div>
 
@@ -180,11 +172,13 @@
 
     	<h3>Contact</h3>
       <!--ICONE FLECHE LOCALISATION-->
-    	<p>40 Rue de la redoute 30 300 Beaucaire</p>
+    	<p>40 Rue de la redoute 30 300 Beaucaire
       <!--ICONE TELEPHONE-->
-    	<p>06.19.85.33.15</p>
+    	06.19.85.33.15
       <!--ICONE ENVELOPPE-->
-    	<p>jonathan-gomez@hotmail.fr</p>
+    	jonathan-gomez@hotmail.fr</p>
+
+      <h3>Téléchargez mon CV</h3>
 
   </footer>
 
