--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
   </ul>
 <!--LOGO NAV-->
   <ul class ="logomenu">
+
 	<li><a href="https://twitter.com/Jogomezzzz">
       <img id="logotwitter" src="./image/logo_twitter.png" alt="Twitter" /></a></li>
 		<li><a href="https://www.facebook.com/profile.php?id=100012290583102">
@@ -123,25 +124,29 @@
 
 <!--.........................COMPETENCES.................-->
 <div class="competence">
-  <h2>Compétences</h2>
-    <h3>Langages et Framework</h3>
 
-      <section id="frontback">
+  <h2>Compétences</h2>
+    <h3>Framework</h3>
+<img class="logoskill" src="./image/logo_bootstrap.png" alt="logo bootstrap" />
+<img class="logoskill" src="./image/logo_symfony.png" alt="logo symfony" />
 
 <!--.........................FRONT................-->
   <section id="front">
     <h4>Front</h4>
     <!-- ICI LOGO LANGAGE -->
-    <img class="logofront" src="./image/logo_html.png" alt="logo html" />
-    <img class="logofront" src="./image/logo_css.png" alt="logo css" />
-    <img class="logofront" src="./image/logo_javascript.png" alt="logo javascript" />
+    <img class="logoskill" src="./image/logo_html.png" alt="logo html" />
+    <img class="logoskill" src="./image/logo_css.png" alt="logo css" />
+    <img class="logoskill" src="./image/logo_javascript.png" alt="logo javascript" />
   </section>
 
 <!--.........................BACK.................-->
   <section id="back">
     <h4>Back</h4>
     <!-- ICI LOGO LANGAGE -->
-
+    <img class="logoskill" src="./image/logo_php.png" alt="logo php" />
+    <img class="logoskill" src="./image/logo_angular.png" alt="logo angular" />
+    <img class="logoskill" src="./image/logo_jquery.png" alt="logo jquery" />
+    <img class="logoskill" src="./image/logo_sql.png" alt="logo sql" />
   </section>
   </div>
 
@@ -172,13 +177,13 @@
 
     	<h3>Contact</h3>
       <!--ICONE FLECHE LOCALISATION-->
-    	<p>40 Rue de la redoute 30 300 Beaucaire
+    	<p><img src="./image/icone/house-1.png" alt="adresse" />40 Rue de la redoute 30 300 Beaucaire</p>
       <!--ICONE TELEPHONE-->
-    	06.19.85.33.15
+    	<p><img src="./image/icone/tel.png" alt="tel" />06.19.85.33.15</p>
       <!--ICONE ENVELOPPE-->
-    	jonathan-gomez@hotmail.fr</p>
+    	<p><img src="./image/icone/envelope.png" alt="mail" />jonathan.gomez.web@gmail.com</p>
 
-      <h3>Téléchargez mon CV</h3>
+      <h3><img src="./image/icone/savecv.png" alt="saveCV" />Téléchargez mon CV</h3>
 
   </footer>
 
