--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <title>Jonathan Gomez || Développeur Web</title>
   <link rel="stylesheet" href="./css/main.css">
   <link rel="stylesheet" href="./css/animate.css">
+  <link rel="stylesheet" href="./css/imagehover.css">
   <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
   <script src="./script/script.js"></script>
 </head>
@@ -178,11 +179,41 @@
   <!--.........................LOISIR.................-->
     <section id="loisir">
       <h2 class="animated bounceInUp un">Mes loisirs</h2>
-      <p>Lire</p>
-      <p>Web</p>
-      <p>Football</p>
 
-    </section>
+      <div id="passion">
+      <div class = "elementpassion">
+      <header><h4>Lecture</h4></header>
+      <figure class="imghvr-zoom-in"><img class="imgloisir" src="./image/livre.jpg" alt="example-image">
+        <figcaption>
+          <h3>Hello World</h3>
+          <p>Life is too important to be taken seriously!</p>
+        </figcaption>
+      </figure>
+
+    </div>
+
+    <div class="elementpassion">
+    <header><h4>Football</h4></header>
+    <figure class="imghvr-zoom-in"><img class="imgloisir" src="./image/velodrome2.jpg" alt="example-image">
+      <figcaption>
+        <h3>Hello World</h3>
+        <p>Life is too important to be taken seriously!</p>
+      </figcaption>
+    </figure>
+
+  </div>
+
+  <div class="elementpassion">
+  <header><h4>Envie de voyage</h4></header>
+  <figure class="imghvr-zoom-in"><img class="imgloisir" src="./image/voyage.jpg" alt="example-image">
+    <figcaption>
+      <h3>Hello World</h3>
+      <p>Life is too important to be taken seriously!</p>
+    </figcaption>
+  </figure>
+</div>
+</div>
+</section>
 
 
   <!--..................CONTACT.........................-->
