--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
   <script src="./script/wow.min.js"></script>
   <script src="./script/script.js"></script>
 
-
 </head>
 
 <header>
@@ -66,11 +65,14 @@
       A propos de moi</h2>
     <img id="profil" class="wow zoomIn" data-wow-duration="2s" data-wow-delay="850ms" data-wow-offset="300"
     src="./image/logo_tete.png" alt="Photo de profil" />
-    <p class="wow bounceInUp" data-wow-duration="2s" data-wow-delay="1050ms" data-wow-offset="400">
+    <p id="apropos" class=" wow bounceInUp" data-wow-duration="2s" data-wow-delay="1050ms" data-wow-offset="400">
       Incenderat autem audaces usque ad insaniam homines ad haec, quae nefariis egere conatibus,
       Luscus quidam curator urbis subito visus: eosque ut heiulans baiolorum praecentor ad expediendum
       quod orsi sunt incitans vocibus crebris. qui haut longe postea ideo vivus exustus est.Incenderat autem
-      audaces usque ad insaniam homines ad haec, quae nefariis egere conatibus, Luscus quidam curator urbis
+      audaces usque ad insaniam homines ad haec, quae nefariis egere conatibus,
+    </p>
+    <p id="apropos2" class=" wow bounceInUp" data-wow-duration="1s" data-wow-delay="850ms">
+      Luscus quidam curator urbis
       subito visus: eosnque ut heiulans baiolorum praecentor ad expediendum quod orsi sunt incitans vocibus crebris.
       qui haut longe postea ideo vivus Incenderat autem audaces usque ad insaniam homines ad haec, quae nefariis egere
       conatibus, Luscus quidam curator urbis subito visus: eosque ut heiulans baiolorum praecentor ad expediendum quod
