--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
   <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
   <script src="./script/wow.min.js"></script>
   <script src="./script/script.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+  <script src="./script/smoothscroll.js"></script>
 
 </head>
 
@@ -20,10 +22,10 @@
     <ul class="mixed-menu wow slideInLeft" data-wow-duration="3s" data-wow-delay="500ms">
 
 		<li><a href="#accueil">Home</a></li>
-		<li><a href="#presentation">About me</a></li><!-- ma présentation cool-->
-		<li><a href="#formation">Parcours</a></li> <!--Formations, expèriences et compétences-->
-		<li><a href="#realisation">Work</a></li><!--Mes réalisations-->
-		<li><a href="#contact">Contact</a></li>
+		<li><a class="js-scrollTo" href="#presentation">About me</a></li><!-- ma présentation cool-->
+		<li><a class="js-scrollTo" href="#formation">Parcours</a></li> <!--Formations, expèriences et compétences-->
+		<li><a class="js-scrollTo" href="#realisation">Work</a></li><!--Mes réalisations-->
+		<li><a class="js-scrollTo" href="#contact">Contact</a></li>
 
   </ul>
 <!--LOGO NAV-->
@@ -53,7 +55,7 @@
       Bienvenue sur mon Portfolio</h1>
     <h2 class="wow bounceInLeft"data-wow-duration="3s" data-wow-delay="500ms" data-wow-offset="200">
       Jonathan Gomez Développeur Web</h2>
-    <a href="#presentation">
+    <a class="js-scrollTo" href="#presentation">
       <img class="fleche wow infinite bounce" data-wow-duration="2s" data-wow-delay="1500ms"
       src="./image/icone/arrows.png" alt="fleche" /></a>
   </section>
@@ -62,24 +64,30 @@
 
   <section id="presentation">
     <h2 class="wow slideInLeft" data-wow-duration="2s" data-wow-delay="450ms" data-wow-offset="200">
-      A propos de moi</h2>
+      Vous cherchez un Développeur Web ?</h2>
+      <p>Ça tombe bien ! Je suis passionné par le web, freelance depuis plus de 7 ans.
+        Si mon profil vous intéresse n'hésitez pas à me contacter ou regardez
+        <a class="js-scrollTo" href="#realisation">mes réalisations.</a></p>
     <img id="profil" class="wow zoomIn" data-wow-duration="2s" data-wow-delay="850ms" data-wow-offset="300"
     src="./image/logo_tete.png" alt="Photo de profil" />
-    <p id="apropos" class=" wow bounceInUp" data-wow-duration="2s" data-wow-delay="1050ms" data-wow-offset="400">
-      Incenderat autem audaces usque ad insaniam homines ad haec, quae nefariis egere conatibus,
-      Luscus quidam curator urbis subito visus: eosque ut heiulans baiolorum praecentor ad expediendum
-      quod orsi sunt incitans vocibus crebris. qui haut longe postea ideo vivus exustus est.Incenderat autem
-      audaces usque ad insaniam homines ad haec, quae nefariis egere conatibus,
+
+    <h3 class=" wow bounceInUp" data-wow-duration="1s" data-wow-delay="850ms">A propos de moi</h3>
+
+    <p id="apropos" class=" wow bounceInUp" data-wow-duration="2s" data-wow-delay="1050ms">
+      Je m'appelle Jonathan Gomez, j'ai commencé le développement web et le web design pour développer
+      un petit site perso et c'est rapidement devenu une vraie vocation. J'aime expérimenter, découvrir et
+      apprendre au fur et à mesure de mes projets pros et perso.
+      En plus de mon activité de Freelance j'enregistre des Formations Vidéos et je travaille sur différents
+      projets personnels.
     </p>
-    <p id="apropos2" class=" wow bounceInUp" data-wow-duration="1s" data-wow-delay="850ms">
-      Luscus quidam curator urbis
-      subito visus: eosnque ut heiulans baiolorum praecentor ad expediendum quod orsi sunt incitans vocibus crebris.
-      qui haut longe postea ideo vivus Incenderat autem audaces usque ad insaniam homines ad haec, quae nefariis egere
-      conatibus, Luscus quidam curator urbis subito visus: eosque ut heiulans baiolorum praecentor ad expediendum quod
-      orsi sunt incitans vocibus crebris. qui haut longe postea ideo vivus exustus Incenderat autem audaces usque ad
-      insaniam homines ad haec, quae nefariis egere conatibus, Luscus quidam curator urbis subito visus: eosque ut
-      heiulans baiolorum praecentor ad expediendum quod orsi sunt incitans vocibus crebris. qui haut longe postea
-      ideo vivus exustus est.est.exustus est.</p>
+    <h3 class=" wow bounceInUp" data-wow-duration="1s" data-wow-delay="850ms">Ils m'ont fait confiance</h3>
+
+    <p id="temoignage" class=" wow bounceInUp" data-wow-duration="1s" data-wow-delay="850ms">
+      Jonathan est super, beau, gentil, il travaille bien. C'est mon idole. Un talent inné, c'est le meilleur.
+    Une sorte de Dieu du développement c'est pour tout ça qu'il faut l'embaucher. Ah oui il sent super bon aussi.
+    </p>
+    <footer class=" wow bounceInUp" data-wow-duration="1s" data-wow-delay="850ms">
+      Barack Obama, Président Américain, Client heureux</footer>
 
   </section>
 
@@ -203,7 +211,7 @@ src="./image/logo_symfony.png" alt="logo symfony" />
 
       <div id="passion">
       <div class = "elementpassion">
-      <figure class="imghvr-zoom-in"><img class="imgloisir" src="./image/livre2.jpg" alt="example-image">
+      <figure class="imghvr-zoom-in"><img class="imgloisir" src="./image/livre2.jpg" alt="livre">
         <figcaption>
           <h3>Je suis un lecteur assidu</h3>
 
@@ -223,7 +231,7 @@ src="./image/logo_symfony.png" alt="logo symfony" />
     </div>
 
     <div class="elementpassion">
-    <figure class="imghvr-zoom-in"><img class="imgloisir" src="./image/velodrome2.jpg" alt="example-image">
+    <figure class="imghvr-zoom-in"><img class="imgloisir" src="./image/velodrome2.jpg" alt="velodrome">
       <figcaption>
         <h3>Mordu de football</h3>
         <p>Je suis passionné de foot depuis tout jeune, je pratique ce sport depuis l'âge de 7 ans.
@@ -233,13 +241,15 @@ src="./image/logo_symfony.png" alt="logo symfony" />
         Blog</a>,
         une page <a class="personal"href="https://www.facebook.com/OM.Maniac.13/">Facebook</a> et
         un <a class="personal"href="https://twitter.com/ommaniac">Twitter</a> consacré à l'OM.</p>
+        <a class="personal"href="http://www.om-maniac.fr/">
+          <img id="ommaniac" src="./image/om.maniac.png" alt="om maniac"></a>
       </figcaption>
     </figure>
 
   </div>
 
   <div class="elementpassion">
-  <figure class="imghvr-zoom-in"><img class="imgloisir" src="./image/voyage.jpg" alt="example-image">
+  <figure class="imghvr-zoom-in"><img class="imgloisir" src="./image/voyage.jpg" alt="voyage">
     <figcaption>
       <h3>Je souhaite voyager</h3>
       <p>Life is too important to be taken seriously!</p>
